[package]
name = "brickball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
winapi = "0.3.9"

# Update 16.12.2021
# After several problems with dynamic linking I removed all the parameters and switched back
# to static linking. It's bit slower but it works perfectly.
#-----------------------------------------------------------------------------------------------
