[package]
name = "brickball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_prototype_lyon = "0.4.0"
winapi = "0.3.9"

[dependencies.bevy]
version = "0.6.0"
deault-features = false
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
default-features = false
features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Update 16.12.2021
# After several problems with dynamic linking I removed all the parameters and switched back
# to static linking. It's bit slower but it works perfectly.
#-----------------------------------------------------------------------------------------------
